# binding-exercise-newer-solution

./: CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
src/: _core.cpp  integrator.hpp  main.cpp
src/binding_exercise/: __init__.py  _core.pyi
src/se_for_sci_hw6/: _core.pyi
tests/: test_compiled.py  test_package.py
